--- a/renderer/public/styles/main.scss
+++ b/renderer/public/styles/main.scss
@@ -1,10 +1,10 @@
-$contraste: #BF7B6B;
-$principal: #2E5FF2;
+$contraste: #F1AC2B;
+$principal: #58AFE0;
 $principal-claro: #276BF2;
 $texto: #3f3844;
 
 *{
-	font-size: 20px;
+	font-size: 15px;
 }
 
 .texto-contraste{
@@ -34,8 +34,8 @@ body{
 	font-size: 0.9rem;
 	outline: none;
 	padding: 5px 15px 5px 15px;
-	.btn-text{	
-		
+	.btn-text{
+
 	}
 	.btn-image{
 
