--- a/renderer/public/styles/main.scss
+++ b/renderer/public/styles/main.scss
@@ -238,9 +238,6 @@ header{
 	padding: 4px 2px 4px 10px;
 } 
 
-.input-field { 
-} 
-
 .input-table-search{
 	padding: 4px 2px 4px 10px; 
 	border-radius: 10px;
@@ -252,4 +249,44 @@ header{
 
 .invisible{
 	visibility: hidden;
+}
+
+
+
+.login-root{
+	display: flex;
+	width: 90%;
+	margin: auto;
+	justify-content: center;
+}
+
+.login-input-icon{
+	margin-bottom: 20px ;
+	position: relative;
+	width: 400px;
+}
+
+.input-login{
+	width: 100%;
+	padding: 10px 0px 10px 10px; 
+	border-radius: 10px;
+	border: 2px solid black;
+	outline: none;
+}
+.input-icon{
+	padding: 10px 0px 10px 10px; 
+	position: absolute;
+	right: 0px;
+}
+.icon-password{
+	cursor: pointer;
+}
+.btn-login{
+	display: block;
+	width: 50%;
+	text-align: center;
+	margin: auto;
+	background-color: $principal-claro;
+	color: white;
+	font-size: 1.2rem;
 }
