--- a/renderer/public/styles/main.scss
+++ b/renderer/public/styles/main.scss
@@ -290,3 +290,45 @@ header{
 	color: white;
 	font-size: 1.2rem;
 }
+
+.modal-root{
+	background-color: white;
+	border-radius: 10px;
+	margin: auto;
+	margin-top: 50px;
+	outline: none;
+	padding: 10px;
+	width: 70%;
+	
+	form{
+		display: flex;
+		flex-direction: column;
+		width: 40%;
+		margin: auto;
+	}
+
+	input[type="number"]::-webkit-inner-spin-button, 
+	input[type="number"]::-webkit-outer-spin-button { 
+	-webkit-appearance: none; 
+	margin: 0; 
+	}
+
+	label{
+		margin-bottom: 20px;
+		span{
+			font-weight: bold;
+		}
+	}
+
+	input{
+		width: 90%;
+		//float: right;
+		padding: 5px 10px;
+		outline: none;
+	}
+
+	.btn{
+		margin: auto;
+	}
+
+}
