--- a/renderer/public/styles/main.scss
+++ b/renderer/public/styles/main.scss
@@ -1,7 +1,9 @@
-$contraste: #FA0000;
-$principal: #58AFE0;
-$principal-claro: #276BF2;
+$contraste: #24B47C;
+$principal: #2C2C2C;
+$principal-claro: #3C4049;
 $texto: #3f3844;
+$contraste-blue: #7289DA;
+$background: #36393F;
 
 *{
 	font-size: 15px;
@@ -14,7 +16,7 @@ $texto: #3f3844;
 }
 
 body{
-	background: white;
+	background: $background;
 	margin: 0px;
 	padding: 0px;
 	font-family: Roboto, Geneva, Tahoma, sans-serif;
@@ -24,7 +26,15 @@ body{
 	margin: 0px;
 }
 .body-page{
-	min-height: 500px;
+	min-height: 970px;
+}
+.left-panel-container{
+	background: $principal;
+	height: 100%;
+}
+.page{
+	display: grid;
+	grid-template-columns: 1fr 6fr;
 }
 .btn{
 	align-items: center;
@@ -40,7 +50,7 @@ body{
 	padding: 10px 15px 10px 15px;
 	background-color: white;
 	.btn-text{
-		
+
 	}
 	.btn-image{
 		margin-right: 5px;
@@ -61,53 +71,36 @@ body{
 
 
 .btn-logout { //https://codepen.io/grohit/pen/zYxMOjR
-    color: #2c2c2c;
+    color: white;
     transition: all 0.5s;
     position: relative;
-    &::after {
-       // content: "\f2f5";
-        font-family: "Font Awesome 5 Pro";
-        font-weight: 400;
-        position: absolute;
-        left: 80%;
-        top: 54%;
-        right: 0;
-        bottom: 0;
-        opacity: 0;
-        transform: translate(-50%, -50%);
-    }
+	 background: transparent;
+	 border: none;
+	 text-align: right;
+	 width: fit-content;
+	 padding: 5px 15px;
 
     &:hover {
-        background: #FA0000;
+		 background: $background;
         transition: all 0.5s;
         border-radius: 10px;
-        box-shadow: 0px 6px 15px #0000ff61;
-		color: #ffffff;
-		.btn-text{
-			color: white;
-		}
-		.btn-image{
-			color: white;
-		}
-        &::after {
-            opacity: 1;
-            transition: all 0.5s;
-            color: #ffffff;
-        }
+		  color: $contraste;
     }
+	 &:focus{
+		 background: $contraste;
+		 color: white;
+	 }
 }
 
 .btn-add{
-	background-color: #7CFF00;
-	//display: inline-flex;
+	color: $contraste;
+	background: transparent;
+	border: none;
+	padding: 5px 15px;
 	margin-right: 20px;
-	background-position: center;
-	transition: background 0.5s;
-	.btn-image{
-		color: $texto;
-	}
 	&:hover {
-	  background: #3DF333 radial-gradient(circle, transparent 1%, #7CFF00 1%) center/11000%;
+		background: $contraste;
+		color: white;
 	}
 	&:active {
 	  background-color: #3DF333;
@@ -117,20 +110,17 @@ body{
 }
 
 .btn-refrescar{
-	//background-color: #4FB0E8;
-	background-color: #83D1FF;
-	//display: inline-flex;
+	color: $contraste-blue;
+	background: transparent;
+	border: none;
+	padding: 5px 15px;
 	margin-right: 20px;
-	background-position: center;
-	transition: background 0.5s;
-	.btn-image{
-		color: $texto;
-	}
 	&:hover {
-	  background: #60C4FF radial-gradient(circle, transparent 1%, #83D1FF 1%) center/11000%;
+		background: $contraste-blue;
+		color: white;
 	}
 	&:active {
-	  background-color: #60C4FF;
+	  background-color: #3DF333;
 	  background-size: 100%;
 	  transition: background 0s;
 	}
@@ -170,51 +160,100 @@ header{
 	//background: $principal;
 	margin-bottom: 20px;
 }
+.input-search{
+	width: calc(80% - 30px);
+	margin: auto;
+	padding: 7px 15px;
+	background: $background;
+	border: solid 1px $contraste;
+	color: white;
+	border-radius: 3px;
+	&:focus, &:hover{
+		border: solid 1px $contraste;
+	}
+	&:focus{
+		box-shadow: 0px 0px 7px $contraste;
+	}
+}
 .header-top{
 	background: $principal;
-	display: flex;
+	display: grid;
+	grid-template-columns: 1.5fr 6fr 1fr;
 	justify-content: space-around;
 	padding: 10px;
 	//margin-top:10px;
 }
-.header-bottom{
-	margin-top: 10px;
-	display: flex;
-	padding: 10px;
+.left-panel{
 	justify-content: space-around;
-	//background-color: $principal-claro;
+	padding-top: 10px;
+	img{
+		width: 90%;
+		display: block;
+		margin: auto;
+		height: 80px;
+		margin-bottom: 30px;
+	}
+	button{
+	    color: white;
+	    transition: all 0.5s;
+	    position: relative;
+		 background: transparent;
+		 border: none;
+		 text-align: right;
+		 width: fit-content;
+		 padding: 10px 15px;
+		 width: calc(100% - 30px);
+		 border-bottom: solid 1px gray;
+		 border-radius: 0px;
+
+	    &:hover {
+			 background: $principal;
+	        transition: all 0.5s;
+			  color: $contraste;
+	    }
+		 &:focus, .selected{
+			 background: $contraste;
+			 color: white;
+		 }
+
+	}
+
 }
 .verProductos{
 	width: 95%;
 	margin: auto;
 }
 .verProductos-tabla{
-	border: 3px solid #ECECEC;
-	width: 90%;
+	width: 100%;
 	margin: auto;
+	margin-top: 25px;
 	border-collapse: collapse;
-
+	color: white;
 	thead{
-		background-color: #C8E5FA;
-		text-align: left;
-		tr{
-			th{
-				border: 3px solid #ECECEC;
-				font-size: 1.1rem !important;
-				padding: 5px 0px 5px 5px;
-			}
+		text-align: center;
+		th{
+			background-color: $principal;
+			color: white;
+			font-size: 1.1rem !important;
+			padding: 10px 10px;
+			border-left: 1px solid $background;
 		}
 	}
 	tbody{
 		text-align: left;
-		tr td{
-			padding: 5px 0px 5px 10px;
-		}
-		tr:nth-child(odd){
-			background-color: #F9FDFF;
-		}
-		tr:nth-child(odd){
-			background-color: #F2F9FE;
+	}
+	td{
+		padding: 5px 10px;
+	}
+	tr:nth-child(odd){
+		background-color: $principal;
+	}
+	tr:nth-child(odd){
+		background-color: $principal-claro;
+	}
+	tr{
+		&:hover{
+			color: $contraste;
 		}
 	}
 }
@@ -228,18 +267,18 @@ header{
 	margin-top: 15px;
 }
 
-.input-icons .mi { 
+.input-icons .mi {
 	position: absolute;
 	right: 5px ;
 	cursor: pointer;
-} 
+}
 
-.icon { 
+.icon {
 	padding: 4px 2px 4px 10px;
-} 
+}
 
 .input-table-search{
-	padding: 4px 2px 4px 10px; 
+	padding: 4px 2px 4px 10px;
 	border-radius: 10px;
 	border: 2px solid black;
 	float: right;
@@ -268,13 +307,13 @@ header{
 
 .input-login{
 	width: 100%;
-	padding: 10px 0px 10px 10px; 
+	padding: 10px 0px 10px 10px;
 	border-radius: 10px;
 	border: 2px solid black;
 	outline: none;
 }
 .input-icon{
-	padding: 10px 0px 10px 10px; 
+	padding: 10px 0px 10px 10px;
 	position: absolute;
 	right: 0px;
 }
@@ -299,7 +338,7 @@ header{
 	outline: none;
 	padding: 10px;
 	width: 70%;
-	
+
 	form{
 		display: flex;
 		flex-direction: column;
@@ -307,10 +346,10 @@ header{
 		margin: auto;
 	}
 
-	input[type="number"]::-webkit-inner-spin-button, 
-	input[type="number"]::-webkit-outer-spin-button { 
-	-webkit-appearance: none; 
-	margin: 0; 
+	input[type="number"]::-webkit-inner-spin-button,
+	input[type="number"]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
 	}
 
 	label{
@@ -332,3 +371,13 @@ header{
 	}
 
 }
+
+
+/***FOOTER***/
+footer{
+	padding: 15px 25px;
+	width: calc(100% - 50px);
+	background: $contraste;
+}
+
+/***FOOTER***/
