--- a/renderer/public/styles/main.scss
+++ b/renderer/public/styles/main.scss
@@ -251,7 +251,7 @@ header{
 	visibility: hidden;
 }
 
-
+/*  LOGIN    */ 
 
 .login-root{
 	display: flex;
@@ -307,12 +307,6 @@ header{
 		margin: auto;
 	}
 
-	input[type="number"]::-webkit-inner-spin-button, 
-	input[type="number"]::-webkit-outer-spin-button { 
-	-webkit-appearance: none; 
-	margin: 0; 
-	}
-
 	label{
 		margin-bottom: 20px;
 		span{
@@ -330,5 +324,51 @@ header{
 	.btn{
 		margin: auto;
 	}
-
 }
+
+input[type="number"]::-webkit-inner-spin-button, 
+	input[type="number"]::-webkit-outer-spin-button { 
+	-webkit-appearance: none; 
+	margin: 0; 
+	}
+/*  vender  */
+
+.vender-root{
+	width: 90%;
+	margin: auto;
+}
+
+.vender-buscador{
+	display: flex;
+	margin: auto;
+	justify-content: space-between;
+	align-content: center;
+	.vender-input{
+		width: 70%;
+	}
+	.btn{
+		//display: inline;
+		margin: 0px;
+	}
+}
+
+.vender-form{
+	width: 100%;
+	display: inline-flex;
+	justify-content: space-around;
+	.input-number{
+		outline: none;
+		width: 50%;
+		height: 100%;
+		text-align: center;
+		font-size: 1.2rem ;
+	}
+	.label-number{
+		display: flex;
+		justify-content: space-between;
+		flex-direction: column;
+		align-items: center;
+		font-size: 1.3rem;
+	}
+}
+
