--- a/renderer/public/styles/main.scss
+++ b/renderer/public/styles/main.scss
@@ -418,7 +418,12 @@ input[type="number"]::-webkit-inner-spin-button,
 }
 
 
-
+/***GenerarReporte***/
+.generarReporte-root{
+	background-color: gray;
+	display: flex;
+	justify-content: space-around;
+}
 
 /***FOOTER***/
 footer{
