--- a/renderer/public/styles/main.scss
+++ b/renderer/public/styles/main.scss
@@ -422,10 +422,16 @@ input[type="number"]::-webkit-inner-spin-button,
 /***GenerarReporte***/
 .generarReporte-root{
 	background-color: gray;
-	display: flex;
-	justify-content: space-around;
+	form{
+		display: flex;
+		justify-content: space-around;
+	}
 }
 
+.visor-pdf{
+	width: 90%;
+	height: 1000px;
+}
 /***FOOTER***/
 footer{
 	padding: 15px 25px;
